fixed some spacing, need to push away from img

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@ html {
 }
 
 body {
-  padding-top: 10rem;
-  padding-left: 10rem;
   margin: 0;
   min-height: 100%;
   padding-bottom: 30px;
@@ -29,7 +27,7 @@ background-size: cover;
 
 .container {
   color: white;
-  margin-top: 10px;
+  margin-top: 10rem;
   margin-bottom: 50px;
 }
 
@@ -81,7 +79,7 @@ footer {
 .adjustRight {
   /* width: calc(100% -10rem); */
   margin-left: 10rem;
-  margin-right: 10px;
+  margin-right: 6rem;
 }
 .rightHeader {
   position: absolute;
@@ -92,21 +90,12 @@ footer {
 .adjustLeft {
   /* width: calc(100% -10rem); */
   margin-right: 10rem;
-  margin-left: 30px;
+  margin-left: 6rem;
 }
 .leftHeader {
   position: absolute;
   top: 20px;
   left: -40px
-}
-
-.vertical-nav {
-  position: fixed;
-  top: 15%;
-  width: 9rem;
-  /* border-radius: 10px;
-  border-style: dashed;
-  border-color: aliceblue; */
 }
 
 table {
@@ -153,7 +142,13 @@ text-orientation: mixed;
 }
 
 .resume {
- max-height: 500px
+ max-height: 500px;
+ /* max-width: 1000px; */
+}
+
+.resumeImg{
+  position: relative;
+    top: -10%;
 }
 
 .resumeButton {
